feat: added databases and databases config

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch ./src/server.ts"
+    "dev": "tsx watch ./src/server.ts",
+    "setup": "tsx ./src/setup.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,8 @@
     "typescript": "^5.4.2"
   },
   "dependencies": {
-    "fastify": "^4.26.2"
+    "fastify": "^4.26.2",
+    "postgres": "^3.4.3",
+    "redis": "^4.6.13"
   }
 }
